tests/NormalTests/paczka2/big_fuzzy/72350414.err
Error in line 4: 73MWw A868 32,6
Error in line 15: yVnj S908 24,28
Error in line 8: yVnj A868 54,2
Error in line 17: BaUu A17 73,1
Error in line 27: A868 A17 90,1
Error in line 37: yVnj S908 41,04
Error in line 32: OBZ6bUgv A17 22,7
Error in line 46: OBZ6bUgv A533 93,9
Error in line 45: BaUu A533 54,2
Error in line 55: OBZ6bUgv A533 6,7
Error in line 44: A868 A868 214,2
Error in line 66: OBZ6bUgv S908 1,5
Error in line 73: 73MWw A17 36,7
Error in line 72: njN07ToP A868 55,9
Error in line 84: 73MWw A533 69,9
Error in line 100: UHbb S908 26,4
Error in line 102: UHbb A868 98,1
Error in line 108: 73MWw A17 90,3
Error in line 111: OBZ6bUgv S908 69,9
Error in line 114: A868 A533 68,4
Error in line 117: A868 S908 8,8
Error in line 120: njN07ToP A533 97,4
Error in line 119: A868 A17 15,3
Error in line 128: 73MWw A868 178,98
Error in line 127: BaUu A533 5,3
Error in line 130: BaUu A17 24,2
Error in line 112: 73MWw A868 97,7
Error in line 137: OBZ6bUgv A868 242,1
Error in line 157: UHbb A868 94,6
Error in line 160: OBZ6bUgv S908 8,0
Error in line 158: 73MWw S908 31,5
Error in line 171: njN07ToP A868 62,1
Error in line 172: OBZ6bUgv A868 90,1
Error in line 184: A868 A17 77,0
Error in line 178: njN07ToP A17 49,3
Error in line 192: njN07ToP S908 37,9
Error in line 200: BaUu A17 320,6
Error in line 202: A868 S9C8 64,6
Error in line 199: OBZ6bUgv S908 78,2
Error in line 216: A868 A868 1,2
Error in line 226: A868 S908 70,1
Error in line 239: OBZ6bUgv A17 0,2
